--- a/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/nl-NL.json
@@ -45,5 +45,13 @@
   "Please enter new password": "Voer een nieuw wachtwoord in",
   "Please enter the same password again": "Voer hetzelfde wachtwoord opnieuw in",
   "The passwords entered twice are inconsistent": "De twee ingevoerde wachtwoorden zijn inconsistent",
-  "Password reset successful": "Wachtwoord opnieuw instellen succesvol"
+  "Password reset successful": "Wachtwoord opnieuw instellen succesvol",
+  "Enable forget password feature": "Vergeet wachtwoord functie inschakelen",
+  "Notification Channel (Email)": "Notificatiekanaal (E-mail)",
+  "Subject": "Onderwerp",
+  "Content type": "Contenttype",
+  "Plain text": "Gewone tekst",
+  "defaultResetPasswordEmailSubject": "Stel je wachtwoord opnieuw in voor [Naam van je app/website]",
+  "defaultResetPasswordEmailContentHTML": "<p>Hallo {{$user.username}},</p>\n\n<p>We hebben een verzoek ontvangen om het wachtwoord voor je [Naam van je app/website]-account opnieuw in te stellen.</p>\n\n<p>Klik op de onderstaande link om je nieuwe wachtwoord in te stellen:</p>\n\n<p>\n  <a href=\"{{$resetLink}}\">Stel je wachtwoord opnieuw in</a>\n</p>\n\n<p>\n  Als je geen wachtwoordreset hebt aangevraagd, negeer dan deze e-mail. Je wachtwoord blijft ongewijzigd.\n</p>\n\n<p>\n  Let op: Voor je veiligheid verloopt deze wachtwoordresetlink over <strong>[Geldigheidsperiode, bijv. 24 uur]</strong>.\n</p>\n\n<p>Als je problemen ondervindt bij het opnieuw instellen van je wachtwoord, neem dan contact op met ons ondersteuningsteam.</p>\n\n<p>\n  Bedankt,<br>\n  Het [Naam van je bedrijf] Team\n</p>",
+  "defaultResetPasswordEmailContentText": "Hallo {{$user.username}},\n\nWe hebben een verzoek ontvangen om het wachtwoord voor je [Naam van je app/website]-account opnieuw in te stellen.\n\nKlik op de onderstaande link om je nieuwe wachtwoord in te stellen:\n\n{{$resetLink}}\n\nAls je geen wachtwoordreset hebt aangevraagd, negeer dan deze e-mail. Je wachtwoord blijft ongewijzigd.\n\nLet op: Voor je veiligheid verloopt deze wachtwoordresetlink over [Geldigheidsperiode, bijv. 24 uur].\n\nAls je problemen ondervindt bij het opnieuw instellen van je wachtwoord, neem dan contact op met ons ondersteuningsteam.\n\nBedankt, Het [Naam van je bedrijf] Team"
 }
