fix(locale): add notification channel messages and update password reset email content in multiple languages

--- a/packages/plugins/@nocobase/plugin-auth/src/locale/ja-JP.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/ja-JP.json
@@ -47,5 +47,10 @@
   "Plain text": "プレーンテキスト",
   "defaultResetPasswordEmailSubject": "[アプリ/ウェブサイト名] のパスワードをリセットしてください",
   "defaultResetPasswordEmailContentHTML": "<p>{{$user.username}} 様、</p>\n\n<p>[アプリ/ウェブサイト名] アカウントのパスワードリセットリクエストを受け付けました。</p>\n\n<p>以下のリンクをクリックして新しいパスワードを設定してください:</p>\n\n<p>\n  <a href=\"{{$resetLink}}\">パスワードをリセット</a>\n</p>\n\n<p>\n  パスワードのリセットをリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。\n</p>\n\n<p>\n  注意: セキュリティのため、このパスワードリセットリンクは <strong>[有効期間、例: 24時間]</strong> で期限切れになります。\n</p>\n\n<p>パスワードのリセットで問題が発生した場合は、サポートチームにお問い合わせください。</p>\n\n<p>\n  ありがとうございます、<br>\n  [会社名] チーム\n</p>",
-  "defaultResetPasswordEmailContentText": "{{$user.username}} 様、\n\n[アプリ/ウェブサイト名] アカウントのパスワードリセットリクエストを受け付けました。\n\n以下のリンクをクリックして新しいパスワードを設定してください:\n\n{{$resetLink}}\n\nパスワードのリセットをリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。\n\n注意: セキュリティのため、このパスワードリセットリンクは [有効期間、例: 24時間] で期限切れになります。\n\nパスワードのリセットで問題が発生した場合は、サポートチームにお問い合わせください。\n\nありがとうございます、[会社名] チーム"
+  "defaultResetPasswordEmailContentText": "{{$user.username}} 様、\n\n[アプリ/ウェブサイト名] アカウントのパスワードリセットリクエストを受け付けました。\n\n以下のリンクをクリックして新しいパスワードを設定してください:\n\n{{$resetLink}}\n\nパスワードのリセットをリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。\n\n注意: セキュリティのため、このパスワードリセットリンクは [有効期間、例: 24時間] で期限切れになります。\n\nパスワードのリセットで問題が発生した場合は、サポートチームにお問い合わせください。\n\nありがとうございます、[会社名] チーム",
+  "No notification channels found. Please ": "通知チャネルが見つかりません。",
+  "add one first": "最初に追加してください",
+  "Reset password email": "パスワードリセットメール",
+  "1. Select a notification channel (Currently only email is supported)": "1. 通知チャネルを選択（現在はメールのみサポート）",
+  "2. Configure the password reset email": "2. パスワードリセット用のメールを設定する"
 }
