--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -1089,5 +1089,5 @@
   "Refresh data blocks": "Aggiorna blocchi di dati",
   "Select data blocks to refresh": "Aggiorna blocchi di dati",
   "After successful submission, the selected data blocks will be automatically refreshed.": "Dopo una soumission réussie, les blocs de données sélectionnés seront automatiquement actualisés.",
-  "Reset link expiration (minutes)": "Reimposta scadenza link (minuti)"
+  "Reset link expiration": "Reimposta scadenza link"
 }
