--- a/packages/core/client/src/locale/ja-JP.json
+++ b/packages/core/client/src/locale/ja-JP.json
@@ -1049,5 +1049,5 @@
   "Refresh data blocks": "データブロックを更新",
   "Select data blocks to refresh": "データブロックを選択して更新",
   "After successful submission, the selected data blocks will be automatically refreshed.": "送信後、選択したデータブロックが自動的に更新されます。",
-  "Reset link expiration (minutes)": "リンクの有効期限をリセット (分)"
+  "Reset link expiration": "リンクの有効期限をリセット"
 }
