--- a/packages/core/client/src/locale/tr-TR.json
+++ b/packages/core/client/src/locale/tr-TR.json
@@ -618,5 +618,5 @@
   "Refresh data blocks": "Yenile veri blokları",
   "Select data blocks to refresh": "Veri bloklarını yenilemek için seçin",
   "After successful submission, the selected data blocks will be automatically refreshed.": "Başarılı bir şekilde gönderildikten sonra, seçilen veri blokları otomatik olarak yenilenecektir.",
-  "Reset link expiration (minutes)": "Bağlantı süresini sıfırla (dakika)"
+  "Reset link expiration": "Bağlantı süresini sıfırla"
 }
