--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -894,5 +894,5 @@
   "Refresh data blocks": "Refresh data blocks",
   "Select data blocks to refresh": "Select data blocks to refresh",
   "After successful submission, the selected data blocks will be automatically refreshed.": "After successful submission, the selected data blocks will be automatically refreshed.",
-  "Reset link expiration (minutes)": "Reset link expiration (minutes)"
+  "Reset link expiration": "Reset link expiration"
 }
