--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -620,5 +620,5 @@
   "Refresh data blocks": "Обновить блоки данных",
   "Select data blocks to refresh": "Выберите блоки данных для обновления",
   "After successful submission, the selected data blocks will be automatically refreshed.": "После успешной отправки выбранные блоки данных будут автоматически обновлены.",
-  "Reset link expiration (minutes)": "Сбросить срок действия ссылки (минуты)"
+  "Reset link expiration": "Сбросить срок действия ссылки"
 }
