--- a/packages/core/client/src/locale/uk-UA.json
+++ b/packages/core/client/src/locale/uk-UA.json
@@ -834,5 +834,5 @@
   "Refresh data blocks": "Оновити дані блоків",
   "Select data blocks to refresh": "Виберіть блоки даних для оновлення",
   "After successful submission, the selected data blocks will be automatically refreshed.": "Після успішної подачі вибрані блоки даних будуть автоматично оновлені.",
-  "Reset link expiration (minutes)": "Скинути термін дії посилання (хвилини)"
+  "Reset link expiration": "Скинути термін дії посилання"
 }
