--- a/packages/core/client/src/locale/zh-TW.json
+++ b/packages/core/client/src/locale/zh-TW.json
@@ -925,5 +925,5 @@
   "Refresh data blocks": "刷新數據區塊",
   "Select data blocks to refresh": "選擇要刷新的數據區塊",
   "After successful submission, the selected data blocks will be automatically refreshed.": "提交成功後，選中的數據區塊將自動刷新。",
-  "Reset link expiration (minutes)": "重置連結過的期時間（分鐘）"
+  "Reset link expiration": "重置連結過的期時間"
 }
