--- a/packages/plugins/@nocobase/plugin-auth/src/locale/de-DE.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/de-DE.json
@@ -63,8 +63,8 @@
   "Please enter the same password again": "Bitte geben Sie dasselbe Passwort erneut ein",
   "The passwords entered twice are inconsistent": "Die zweimal eingegebenen Passwörter stimmen nicht überein",
   "Password reset successful": "Passwort zurücksetzen erfolgreich",
-  "Enable forget password feature": "Funktion zum Zurücksetzen des Passworts aktivieren",
-  "Notification Channel (Email)": "Benachrichtigungskanal (E-Mail)",
+  "Enable forget password": "Funktion zum Zurücksetzen des Passworts aktivieren",
+  "Notification channel (Email)": "Benachrichtigungskanal (E-Mail)",
   "Subject": "Betreff",
   "Content type": "Inhaltstyp",
   "Plain text": "Reiner Text",
@@ -74,6 +74,7 @@
   "No notification channels found. Please ": "Keine Benachrichtigungskanäle gefunden. Bitte ",
   "add one first": "fügen Sie zuerst einen hinzu",
   "Reset password email": "E-Mail zum Zurücksetzen des Passworts",
-  "1. Select a notification channel (Currently only email is supported)": "1. Wählen Sie einen Benachrichtigungskanal aus (Derzeit wird nur E-Mail unterstützt)",
-  "2. Configure the password reset email": "2. Konfigurieren Sie die E-Mail zum Zurücksetzen des Passworts"
+  "1. Select notification channel": "1. Benachrichtigungskanal auswählen",
+  "2. Configure reset email": "2. Konfigurieren Sie die Rücksetz-E-Mail",
+  "The notification channel used to send the reset password email, only support email channel": "Der Benachrichtigungskanal, der verwendet wird, um die E-Mail zum Zurücksetzen des Passworts zu senden, unterstützt nur den E-Mail-Kanal"
 }
