--- a/packages/plugins/@nocobase/plugin-auth/src/locale/ko-KR.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/ko-KR.json
@@ -40,8 +40,8 @@
   "Please enter the same password again": "같은 비밀번호를 다시 입력하세요",
   "The passwords entered twice are inconsistent": "입력한 두 개의 비밀번호가 일치하지 않습니다",
   "Password reset successful": "비밀번호 재설정 성공",
-  "Enable forget password feature": "비밀번호 분실 기능 활성화",
-  "Notification Channel (Email)": "알림 채널 (이메일)",
+  "Enable forget password": "비밀번호 분실 기능 활성화",
+  "Notification channel (Email)": "알림 채널 (이메일)",
   "Subject": "제목",
   "Content type": "콘텐츠 유형",
   "Plain text": "일반 텍스트",
@@ -51,6 +51,7 @@
   "No notification channels found. Please ": "알림 채널을 찾을 수 없습니다. ",
   "add one first": "먼저 하나 추가하세요",
   "Reset password email": "비밀번호 재설정 이메일",
-  "1. Select a notification channel (Currently only email is supported)": "1. 알림 채널 선택 (현재 이메일만 지원됨)",
-  "2. Configure the password reset email": "2. 비밀번호 재설정 이메일 구성"
+  "1. Select notification channel": "1. 알림 채널 선택",
+  "2. Configure reset email": "2. 리셋 이메일 설정",
+  "The notification channel used to send the reset password email, only support email channel": "비밀번호 재설정 이메일을 보내는 데 사용되는 알림 채널, 이메일 채널만 지원합니다"
 }
