--- a/packages/plugins/@nocobase/plugin-auth/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/zh-CN.json
@@ -62,8 +62,8 @@
   "Please enter the same password again": "请再次输入相同的密码",
   "The passwords entered twice are inconsistent": "两次输入的密码不一致",
   "Password reset successful": "密码重置成功",
-  "Enable forget password feature": "启用忘记密码功能",
-  "Notification Channel (Email)": "通知渠道（电子邮件）",
+  "Enable forget password": "启用忘记密码功能",
+  "Notification channel (Email)": "通知渠道（电子邮件）",
   "Subject": "主题",
   "Content type": "内容类型",
   "Plain text": "普通文本",
@@ -73,6 +73,7 @@
   "No notification channels found. Please ": "未找到通知渠道，请",
   "add one first": "先添加一个",
   "Reset password email": "重置密码邮件",
-  "1. Select a notification channel (Currently only email is supported)": "1. 选择一个通知渠道（目前仅支持电子邮件）",
-  "2. Configure the password reset email": "2. 配置用来重置密码的邮件"
+  "1. Select notification channel": "1. 选择通知渠道",
+  "2. Configure reset email": "2. 配置重置邮件",
+  "The notification channel used to send the reset password email, only support email channel": "发送重置密码邮件所使用的通知渠道，仅支持电子邮件通道"
 }
