--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -1105,5 +1105,5 @@
   "No pages yet, please configure first": "暂无页面，请先配置",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "点击右上角的“界面配置”图标，进入界面配置模式",
   "After successful submission, the selected data blocks will be automatically refreshed.": "提交成功后，会自动刷新这里选中的数据区块。",
-  "Reset link expiration": "重置链接的过期时间"
+  "Reset link expiration": "重置链接有效期"
 }
