--- a/packages/plugins/@nocobase/plugin-auth/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/en-US.json
@@ -67,13 +67,15 @@
   "Subject": "Subject",
   "Content type": "Content type",
   "Plain text": "Plain text",
-  "defaultResetPasswordEmailSubject": "Reset your password for [Your App/Website Name]",
-  "defaultResetPasswordEmailContentHTML": "<p>Hello {{$user.username}},</p>\n\n<p>We received a request to reset the password for your [Your App/Website Name] account.</p>\n\n<p>Please click the link below to set your new password:</p>\n\n<p>\n  <a href=\"{{$resetLink}}\">Reset Your Password</a>\n</p>\n\n<p>\n  If you did not request a password reset, please ignore this email. Your password will remain unchanged.\n</p>\n\n<p>\n  Please note: For your security, this password reset link will expire in <strong>[Validity Period, e.g., 24 hours]</strong>.\n</p>\n\n<p>If you encounter any issues resetting your password, please contact our support team.</p>\n\n<p>\n  Thanks,<br>\n  The [Your Company Name] Team\n</p>",
-  "defaultResetPasswordEmailContentText": "Hello {{$user.username}},\n\nWe received a request to reset the password for your [Your App/Website Name] account.\n\nPlease click the link below to set your new password:\n\n{{$resetLink}}\n\nIf you did not request a password reset, please ignore this email. Your password will remain unchanged.\n\nPlease note: For your security, this password reset link will expire in [Validity Period, e.g., 24 hours].\n\nIf you encounter any issues resetting your password, please contact our support team.\n\nThanks, The [Your Company Name] Team",
+  "defaultResetPasswordEmailSubject": "Reset your password for {{$systemSettings.title}}",
+  "defaultResetPasswordEmailContentHTML": "<p>Hello {{$user.username}},</p>\n\n<p>We received a request to reset the password for your {{$systemSettings.title}} account.</p>\n\n<p>Please click the link below to set your new password:</p>\n\n<p>\n  <a href=\"{{$resetLink}}\">Reset Your Password</a>\n</p>\n\n<p>\n  If you did not request a password reset, please ignore this email. Your password will remain unchanged.\n</p>\n\n<p>\n  Please note: For your security, this password reset link will expire in <strong>{{$resetLinkExpiration}} minutes</strong>.\n</p>\n\n<p>If you encounter any issues resetting your password, please contact our support team.</p>\n\n<p>\n  Thanks,<br>\n  The {{$systemSettings.title}} Team\n</p>",
+  "defaultResetPasswordEmailContentText": "Hello {{$user.username}},\n\nWe received a request to reset the password for your {{$systemSettings.title}} account.\n\nPlease click the link below to set your new password:\n\n{{$resetLink}}\n\nIf you did not request a password reset, please ignore this email. Your password will remain unchanged.\n\nPlease note: For your security, this password reset link will expire in {{$resetLinkExpiration}} minutes.\n\nIf you encounter any issues resetting your password, please contact our support team.\n\nThanks, The {{$systemSettings.title}} Team",
   "No notification channels found. Please ": "No notification channels found. Please ",
   "add one first": "add one first",
   "Reset password email": "Reset password email",
   "1. Select notification channel": "1. Select notification channel",
   "2. Configure reset email": "2. Configure reset email",
-  "The notification channel used to send the reset password email, only support email channel": "The notification channel used to send the reset password email, only support email channel"
+  "The notification channel used to send the reset password email, only support email channel": "The notification channel used to send the reset password email, only support email channel",
+  "Reset link expiration (minutes)": "Reset link expiration (minutes)",
+  "Reset password link": "Reset password link"
 }
