--- a/packages/plugins/@nocobase/plugin-auth/src/locale/ja-JP.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/ja-JP.json
@@ -45,13 +45,15 @@
   "Subject": "件名",
   "Content type": "コンテンツタイプ",
   "Plain text": "プレーンテキスト",
-  "defaultResetPasswordEmailSubject": "[アプリ/ウェブサイト名] のパスワードをリセットしてください",
-  "defaultResetPasswordEmailContentHTML": "<p>{{$user.username}} 様、</p>\n\n<p>[アプリ/ウェブサイト名] アカウントのパスワードリセットリクエストを受け付けました。</p>\n\n<p>以下のリンクをクリックして新しいパスワードを設定してください:</p>\n\n<p>\n  <a href=\"{{$resetLink}}\">パスワードをリセット</a>\n</p>\n\n<p>\n  パスワードのリセットをリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。\n</p>\n\n<p>\n  注意: セキュリティのため、このパスワードリセットリンクは <strong>[有効期間、例: 24時間]</strong> で期限切れになります。\n</p>\n\n<p>パスワードのリセットで問題が発生した場合は、サポートチームにお問い合わせください。</p>\n\n<p>\n  ありがとうございます、<br>\n  [会社名] チーム\n</p>",
-  "defaultResetPasswordEmailContentText": "{{$user.username}} 様、\n\n[アプリ/ウェブサイト名] アカウントのパスワードリセットリクエストを受け付けました。\n\n以下のリンクをクリックして新しいパスワードを設定してください:\n\n{{$resetLink}}\n\nパスワードのリセットをリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。\n\n注意: セキュリティのため、このパスワードリセットリンクは [有効期間、例: 24時間] で期限切れになります。\n\nパスワードのリセットで問題が発生した場合は、サポートチームにお問い合わせください。\n\nありがとうございます、[会社名] チーム",
+  "defaultResetPasswordEmailSubject": "{{$systemSettings.title}} のパスワードをリセット",
+  "defaultResetPasswordEmailContentHTML": "<p>{{$user.username}} 様,</p>\n\n<p>{{$systemSettings.title}} アカウントのパスワードリセットリクエストを受け付けました。</p>\n\n<p>以下のリンクをクリックして新しいパスワードを設定してください:</p>\n\n<p>\n  <a href=\"{{$resetLink}}\">パスワードをリセット</a>\n</p>\n\n<p>\n  パスワードリセットをリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。\n</p>\n\n<p>\n  注意: セキュリティのため、このパスワードリセットリンクは <strong>{{$resetLinkExpiration}} 分</strong> で有効期限が切れます。\n</p>\n\n<p>パスワードのリセットで問題が発生した場合は、サポートチームにお問い合わせください。</p>\n\n<p>\n  よろしくお願いいたします,<br>\n  {{$systemSettings.title}} チーム\n</p>",
+  "defaultResetPasswordEmailContentText": "{{$user.username}} 様,\n\n{{$systemSettings.title}} アカウントのパスワードリセットリクエストを受け付けました。\n\n以下のリンクをクリックして新しいパスワードを設定してください:\n\n{{$resetLink}}\n\nパスワードリセットをリクエストしていない場合は、このメールを無視してください。パスワードは変更されません。\n\n注意: セキュリティのため、このパスワードリセットリンクは {{$resetLinkExpiration}} 分 で有効期限が切れます。\n\nパスワードのリセットで問題が発生した場合は、サポートチームにお問い合わせください。\n\nよろしくお願いいたします, {{$systemSettings.title}} チーム",
   "No notification channels found. Please ": "通知チャネルが見つかりません。",
   "add one first": "最初に追加してください",
   "Reset password email": "パスワードリセットメール",
   "1. Select notification channel": "1. 通知チャネルを選択",
   "2. Configure reset email": "2. リセットメールを設定",
-  "The notification channel used to send the reset password email, only support email channel": "パスワードリセットメールを送信するために使用される通知チャネル、メールチャネルのみサポート"
+  "The notification channel used to send the reset password email, only support email channel": "パスワードリセットメールを送信するために使用される通知チャネル、メールチャネルのみサポート",
+  "Reset link expiration (minutes)": "リセットリンクの有効期限（分）",
+  "Reset password link": "パスワードリセットリンク"
 }
