feat: add convert template block to page block action (#6662)
* feat: add convert template block to page block action

* feat: convert template block to normal block

* fix: remove remaining template properties

* fix: list template not loading data

* fix: user menu render error

* fix: save as template and convert to block should hide in workflow config page

* fix: incorrect translation

--- a/packages/plugins/@nocobase/plugin-block-template/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-block-template/src/locale/zh-CN.json
@@ -12,7 +12,9 @@
   "Mobile": "移动端",
   "Current": "当前记录",
   "Revert to template": "恢复到模板",
+  "Convert to normal block": "转换成普通区块",
   "Are you sure you want to revert all changes from the template?": "您确定要恢复所有对模板的更改吗？",
+  "Are you sure you want to convert this template block to a normal block?": "您确定要将此模板区块转换为普通区块吗？",
   "Templates": "模板",
   "Block templates": "区块模板",
   "Submit": "提交",
@@ -22,6 +24,7 @@
   "Saved successfully": "保存成功",
   "Block template": "区块模板",
   "Reset successfully": "重置成功",
+  "Converted successfully": "转换成功",
   "Delete successfully": "删除成功",
   "Template block settings": "模板区块设置",
   "Filter": "筛选",
