feat: be able to create reference template

--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -470,7 +470,8 @@
   "Turn pages": "Pasar páginas",
   "Others": "Otros",
   "Other records": "Otros registros",
-  "Save as template": "Guardar como plantilla",
+  "Save as reference template": "Guardar como plantilla de referencia",
+  "Save as inherited template": "Guardar como plantilla heredada",
   "Save as block template": "Guardar como plantilla de bloque",
   "Block templates": "Bloquear plantillas",
   "Block template": "Plantilla de bloque",
