--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -485,7 +485,8 @@
   "Turn pages": "Tourner les pages",
   "Others": "Autres",
   "Other records": "Autres enregistrements",
-  "Save as template": "Enregistrer en tant que modèle",
+  "Save as reference template": "Enregistrer en tant que modèle de référence",
+  "Save as inherited template": "Enregistrer en tant que modèle hérité",
   "Save as block template": "Enregistrer en tant que modèle de bloc",
   "Block templates": "Modèles de bloc",
   "Block template": "Modèle de bloc",
