--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -494,7 +494,8 @@
   "Turn pages": "Volta pagine",
   "Others": "Altri",
   "Other records": "Altri record",
-  "Save as template": "Salva come modello",
+  "Save as reference template": "Salva come modello di riferimento",
+  "Save as inherited template": "Salva come modello ereditato",
   "Save as block template": "Salva come modello blocco",
   "Block templates": "Modelli blocco",
   "Block template": "Modello blocco",
