--- a/packages/core/client/src/locale/ja-JP.json
+++ b/packages/core/client/src/locale/ja-JP.json
@@ -397,7 +397,8 @@
   "Turn pages": "ページをめくる",
   "Others": "その他",
   "Other records": "他のレコード",
-  "Save as template": "テンプレートとして保存",
+  "Save as reference template": "参照テンプレートとして保存",
+  "Save as inherited template": "継承テンプレートとして保存",
   "Save as block template": "ブロックテンプレートとして保存",
   "Block templates": "ブロックテンプレート",
   "Block template": "ブロックテンプレート",
