--- a/packages/core/client/src/locale/ko-KR.json
+++ b/packages/core/client/src/locale/ko-KR.json
@@ -517,7 +517,8 @@
   "Turn pages": "페이지 넘김",
   "Others": "기타",
   "Other records": "기타 레코드",
-  "Save as template": "템플릿으로 저장",
+  "Save as reference template": "참조 템플릿으로 저장",
+  "Save as inherited template": "상속 템플릿으로 저장",
   "Save as block template": "블록 템플릿으로 저장",
   "Block templates": "블록 템플릿",
   "Block template": "블록 템플릿",
