--- a/packages/core/client/src/locale/pt-BR.json
+++ b/packages/core/client/src/locale/pt-BR.json
@@ -433,7 +433,8 @@
   "Turn pages": "Virar páginas",
   "Others": "Outros",
   "Other records": "Outros registros",
-  "Save as template": "Salvar como modelo",
+  "Save as reference template": "Salvar como modelo de referência",
+  "Save as inherited template": "Salvar como modelo herdado",
   "Save as block template": "Salvar como modelo de bloco",
   "Block templates": "Modelos de bloco",
   "Block template": "Modelo de bloco",
