--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -337,7 +337,8 @@
   "Turn pages": "Перелистывать страницы",
   "Others": "Другие",
   "Other records": "Другие записи",
-  "Save as template": "Сохранить как шаблон",
+  "Save as reference template": "Сохранить как шаблон ссылки",
+  "Save as inherited template": "Сохранить как шаблон наследования",
   "Save as block template": "Сохранить как шаблон Блока",
   "Block templates": "Шаблоны блоков",
   "Convert reference to duplicate": "Преобразовать ссылку в дубликат",
