--- a/packages/core/client/src/locale/tr-TR.json
+++ b/packages/core/client/src/locale/tr-TR.json
@@ -336,7 +336,8 @@
   "Turn pages": "Sayfaları çevir",
   "Others": "Diğerleri",
   "Other records": "Diğer kayıtlar",
-  "Save as template": "Şablon olarak kaydet",
+  "Save as reference template": "Referans şablonu olarak kaydet",
+  "Save as inherited template": "Kalıtım şablonu olarak kaydet",
   "Save as block template": "Blok şablonu olarak kaydet",
   "Block templates": "Blok şablonları",
   "Block template": "Blok şablonu",
