--- a/packages/core/client/src/locale/uk-UA.json
+++ b/packages/core/client/src/locale/uk-UA.json
@@ -487,7 +487,8 @@
   "Turn pages": "Переключати сторінки",
   "Others": "Інші",
   "Other records": "Інші записи",
-  "Save as template": "Зберегти як шаблон",
+  "Save as reference template": "Зберегти як шаблон посилання",
+  "Save as inherited template": "Зберегти як шаблон нащадка",
   "Save as block template": "Зберегти як шаблон блока",
   "Block templates": "Шаблони блоків",
   "Block template": "Шаблон блока",
