--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -527,7 +527,8 @@
   "Turn pages": "翻页",
   "Others": "其他",
   "Other records": "其他记录",
-  "Save as template": "保存为模板",
+  "Save as reference template": "保存为引用模板",
+  "Save as inherited template": "保存为继承模板",
   "Save as block template": "保存为区块模板",
   "Block templates": "区块模板",
   "Block template": "区块模板",
