--- a/packages/core/client/src/locale/zh-TW.json
+++ b/packages/core/client/src/locale/zh-TW.json
@@ -518,7 +518,8 @@
   "Turn pages": "翻頁",
   "Others": "其他",
   "Other records": "其他記錄",
-  "Save as template": "儲存為模板",
+  "Save as reference template": "儲存為引用模板",
+  "Save as inherited template": "儲存為繼承模板",
   "Save as block template": "儲存為區塊模板",
   "Block templates": "區塊模板",
   "Block template": "區塊模板",
