--- a/packages/core/client/src/locale/de-DE.json
+++ b/packages/core/client/src/locale/de-DE.json
@@ -500,7 +500,8 @@
   "Turn pages": "Seiten umblättern",
   "Others": "Andere",
   "Other records": "Andere Datensätze",
-  "Save as template": "Als Vorlage speichern",
+  "Save as reference template": "Als Referenzvorlage speichern",
+  "Save as inherited template": "Als vererbte Vorlage speichern",
   "Save as block template": "Als Blockvorlage speichern",
   "Block templates": "Blockvorlagen",
   "Block template": "Blockvorlage",
