--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -501,7 +501,8 @@
   "Turn pages": "Turn pages",
   "Others": "Others",
   "Other records": "Other records",
-  "Save as template": "Save as template",
+  "Save as reference template": "Save as reference template",
+  "Save as inherited template": "Save as inherited template",
   "Save as block template": "Save as block template",
   "Block templates": "Block templates",
   "Block template": "Block template",
