chore: update template title

--- a/packages/core/client/src/locale/de-DE.json
+++ b/packages/core/client/src/locale/de-DE.json
@@ -590,6 +590,7 @@
   "Blank block": "Leerer Block",
   "Duplicate template": "Vorlage duplizieren",
   "Reference template": "Referenzvorlage",
+  "Inherited template": "Vererbte Vorlage",
   "Create calendar block": "Kalenderblock erstellen",
   "Create kanban block": "Kanban-Block erstellen",
   "Grouping field": "Gruppierungsfeld",
