--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -591,6 +591,7 @@
   "Blank block": "Blank block",
   "Duplicate template": "Duplicate template",
   "Reference template": "Reference template",
+  "Inherited template": "Inherited template",
   "Create calendar block": "Create calendar block",
   "Create kanban block": "Create kanban block",
   "Grouping field": "Grouping field",
