--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -561,6 +561,7 @@
   "Blank block": "Bloque en blanco",
   "Duplicate template": "Duplicar plantilla",
   "Reference template": "Plantilla de referencia",
+  "Inherited template": "Plantilla heredada",
   "Create calendar block": "Crear bloque de calendario",
   "Create kanban block": "Crear bloque kanban",
   "Grouping field": "Campo de agrupación",
