--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -574,6 +574,7 @@
   "Blank block": "Bloc vierge",
   "Duplicate template": "Dupliquer le modèle",
   "Reference template": "Référencer le modèle",
+  "Inherited template": "Modèle hérité",
   "Create calendar block": "Créer un bloc de calendrier",
   "Create kanban block": "Créer un bloc kanban",
   "Grouping field": "Champ de regroupement",
