--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -581,6 +581,7 @@
   "Blank block": "Blocco vuoto",
   "Duplicate template": "Modello duplicato",
   "Reference template": "Modello di riferimento",
+  "Inherited template": "Modello ereditato",
   "Create calendar block": "Crea blocco calendario",
   "Create kanban block": "Crea blocco kanban",
   "Grouping field": "Campo di raggruppamento",
