--- a/packages/core/client/src/locale/nl-NL.json
+++ b/packages/core/client/src/locale/nl-NL.json
@@ -594,6 +594,7 @@
     "Blank block": "Leeg blok",
     "Duplicate template": "Sjabloon dupliceren",
     "Reference template": "Sjabloon refereren",
+    "Inherited template": "Overerfde sjabloon",
     "Create calendar block": "Kalenderblok maken",
     "Create kanban block": "Kanbanblok maken",
     "Grouping field": "Groepeer veld",
