--- a/packages/core/client/src/locale/pt-BR.json
+++ b/packages/core/client/src/locale/pt-BR.json
@@ -526,6 +526,7 @@
   "Blank block": "Bloco em branco",
   "Duplicate template": "Duplicar modelo",
   "Reference template": "Modelo de referência",
+  "Inherited template": "Modelo herdado",
   "Create calendar block": "Criar bloco de calendário",
   "Create kanban block": "Criar bloco Kanban",
   "Grouping field": "Campo de agrupamento",
