--- a/packages/core/client/src/locale/ru-RU.json
+++ b/packages/core/client/src/locale/ru-RU.json
@@ -412,6 +412,7 @@
   "Blank block": "Пустой блок",
   "Duplicate template": "Дублировать шаблон",
   "Reference template": "Справочный шаблон",
+  "Inherited template": "Наследуемый шаблон",
   "Create calendar block": "Создать блок календаря",
   "Create kanban block": "Создать блок Канбан",
   "Grouping field": "Поле группировки",
