--- a/packages/core/client/src/locale/tr-TR.json
+++ b/packages/core/client/src/locale/tr-TR.json
@@ -412,6 +412,7 @@
   "Blank block": "Boş blok",
   "Duplicate template": "Şablonun kopyasını oluştur",
   "Reference template": "Referans şablon",
+  "Inherited template": "Kalıtım şablonu",
   "Create calendar block": "Takvim bloğu oluştur",
   "Create kanban block": "Kanban bloğu oluştur",
   "Grouping field": "Alan gruplandırma",
