--- a/packages/core/client/src/locale/uk-UA.json
+++ b/packages/core/client/src/locale/uk-UA.json
@@ -578,6 +578,7 @@
   "Blank block": "Порожній блок",
   "Duplicate template": "Дублювати шаблон",
   "Reference template": "Посилання на шаблон",
+  "Inherited template": "Нащадковий шаблон",
   "Create calendar block": "Створити блок календаря",
   "Create kanban block": "Створити блок канбану",
   "Grouping field": "Поле для групування",
