fix: menu not correct

--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -891,7 +891,7 @@
   "No pages yet, please configure first": "No pages yet, please configure first",
   "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode": "Click the \"UI Editor\" icon in the upper right corner to enter the UI Editor mode",
   "Deprecated": "Deprecated",
-  "The following old template features have been deprecated and will be removed in next version.": "The following old template features have been deprecated and will be removed in next version.",
+  "The following old template features have been deprecatedcc and will be removed in next version.": "The following old template features have been deprecated and will be removed in next version.",
   "Full permissions": "Full permissions",
   "Refresh data blocks": "Refresh data blocks",
   "Select data blocks to refresh": "Select data blocks to refresh",
